--- a/css/styles.css
+++ b/css/styles.css
@@ -424,8 +424,45 @@ textarea {
     display: none;
 }
 
+@keyframes bounce {
+    0% {
+        -webkit-transform: translateY(-2000px);
+        -moz-transform: translateY(-2000px);
+        -ms-transform: translateY(-2000px);
+        -o-transform: translateY(-2000px);
+        transform: translateY(-2000px);
+    }
+
+    70% {
+        -webkit-transform: translateY(-510px);
+        -moz-transform: translateY(-510px);
+        -ms-transform: translateY(-510px);
+        -o-transform: translateY(-510px);
+        transform: translateY(-510px);
+    }
+
+    90% {
+        -webkit-transform: translateY(-550px);
+        -moz-transform: translateY(-550px);
+        -ms-transform: translateY(-550px);
+        -o-transform: translateY(-550px);
+        transform: translateY(-550px);
+    }
+    
+    100% {
+        -webkit-transform: translateY(-540px);
+        -moz-transform: translateY(-540px);
+        -ms-transform: translateY(-540px);
+        -o-transform: translateY(-540px);
+        transform: translateY(-540px);
+    }
+}
+
 .popup-show {
     display: block;
+    animation-name: bounce;
+    animation-duration: 0.6s;
+    animation-timing-function: linear;
 }
 
 .popup-write-us {
@@ -440,6 +477,7 @@ textarea {
     left: 50%;
     margin-left: -480px;
     z-index: 1001;
+
 }
 
 .popup-write-us__overlay {
