--- a/css/styles.css
+++ b/css/styles.css
@@ -48,22 +48,30 @@ ul {
 }
 
 .slider-item:nth-child(1) {
-    z-index: 100;
+    z-index: 3;
 }
 
 .slider-item:nth-child(2) {
-    z-index: 10;
+    z-index: 2;
 }
 
 .slider__item:nth-child(3){
     z-index: 1;
 }
 
-.slider__controls {
+.slider-controls-group {
     position: absolute;
     bottom: 0;
     left: 50%;
     z-index: 101;
+}
+
+.slider__controls {
+
+}
+
+.slider-show {
+    z-index: 10;
 }
 
 .categories {
