--- a/css/styles.css
+++ b/css/styles.css
@@ -61,13 +61,55 @@ ul {
 
 .slider-controls-group {
     position: absolute;
-    bottom: 0;
+    width: 90px;
+    bottom: 96px;
     left: 50%;
     z-index: 101;
+    display: flex;
+    justify-content: space-between;
 }
 
 .slider__controls {
 
+}
+
+.slider__label {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background-color: white;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    position: relative;
+}
+
+.slider__label::before {
+    content: "";
+    display: none;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 3px solid #c1c1c1;
+    
+    background-color: white;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.slider__controls {
+    display: none;
+}
+
+.slider__controls:checked + .slider__label::before {
+    display: block;
 }
 
 .slider-show {
