--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,28 @@
+@font-face {
+    font-family: "Roboto";
+    src:
+        url("../fonts/roboto.woff2") format("woff2"),
+        url("../fonts/roboto.woff") format("woff");
+
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src:
+        url("../fonts/robotobold.woff2") format("woff2"),
+        url("../fonts/robotobold.woff") format("woff");
+
+    font-style: normal;
+    font-weight: bold;
+}
+
 body {
     margin: 0;
     padding: 0;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", "Arial", sans-serif;
 }
 
 p {
@@ -152,7 +172,7 @@ ul {
 }
 
 .about-us__first-column {
-    width: 660px;
+    width: 670px;
 }
 
 .about-us__second-column {
@@ -227,7 +247,7 @@ ul {
     line-height: 55px;
     font-weight: bold;
 
-    width: 520px;
+    width: 525px;
     margin-top: 0;
     padding-top: 60px;
     margin-bottom: 25px;
@@ -256,7 +276,7 @@ ul {
     margin-bottom: 30px;
 }
 
-sup {
+.about-us__sup {
     font-size: 25px;
 }
 
@@ -397,7 +417,9 @@ textarea {
 .slider__button,
 .categories__button,
 .adress__button,
-.write-us__submit {
+.write-us__submit,
+.products__price,
+.filter__button {
     color: #fff;
     background-color: #fb565a;
     text-decoration: none;
@@ -626,7 +648,8 @@ textarea {
     color: #d7dcde;
 }
 
-.write-us__submit {
+.write-us__submit,
+.products__price {
     border: none;
 }
 
@@ -658,6 +681,252 @@ textarea {
     /* Разное */
 }
 
+.inner-page {
+    width: 1160px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.filter {
+    width: 260px;
+}
+
+.filter__legend,
+.filter__h3,
+.products__h3 {
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.filter__h3 {
+    margin-bottom: 50px;
+}
+
+.filter__fieldset {
+    margin-top: 40px;
+    padding: 0;
+    border: none;
+}
+
+.filter__label,
+.filter__label-radio,
+.filter__label-checkbox {
+    position: relative;
+
+    display: block;
+    padding-left: 35px;
+    margin-top: 20px;
+
+    font-weight: normal;
+    color: #283136;
+}
+
+.filter__radio,
+.filter__checkbox {
+    display: none;
+}
+
+.filter__radio-off,
+.filter__radio-on {
+    position: absolute;
+    top: -4px;
+    left: 0;
+}
+
+.filter__radio-off {
+    display: block;
+    fill: #999999;
+}
+
+.filter__radio-on {
+    display: none;
+    fill: #b8b8b8;
+}
+
+.filter__checkbox-off {
+    position: absolute;
+    top: -2px;
+    left: 0;
+
+    display: block;
+
+    fill: #999999;
+}
+
+.filter__checkbox-on {
+    position: absolute;
+    top: -2px;
+    left: 0;
+
+    display: none;
+
+    fill: #b8b8b8;
+}
+
+.filter__radio:checked + .filter__label-radio .filter__radio-off,
+.filter__checkbox:checked + .filter__label-checkbox .filter__checkbox-off {
+    display: none;
+}
+
+.filter__radio:checked + .filter__label-radio .filter__radio-on,
+.filter__checkbox:checked + .filter__label-checkbox .filter__checkbox-on {
+    display: block;
+}
+
+.filter__button {
+    width: 260px;
+    margin-top: 40px;
+
+    font-weight: bold;
+    color: #000000;
+    background-color: #eeeeee;
+    border: none;
+}
+
+.products {
+    width: 760px;
+}
+
+.products__sorting {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.products__sort-option {
+    padding: 0 10px;
+
+    text-decoration: none;
+    color: #ededed;
+}
+
+.products__sort-icon-down,
+.products__sort-icon-up {
+    fill: #ededed;
+}
+
+.products__sort {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.products__items {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.products__item-header {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 360px;
+    height: 40px;
+
+    background-color: #e9e9e9;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.products__item {
+    position: relative;
+
+    margin-bottom: 33px;
+}
+
+.products__item-header-circle {
+    width: 14px;
+    height: 14px;
+    margin-right: 10px;
+
+    background-color: #ffffff;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.products__item-header-circle:first-child {
+    margin-left: 15px;
+}
+
+.products__info {
+    position: absolute;
+    bottom: 0;
+    display: none;
+
+    width: 360px;
+    height: 230px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 40px 80px;
+
+    background-color: #eeeeee;
+}
+
+.products__h4 {
+    margin-top: 0;
+    margin-bottom: 20px;
+
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.products__p {
+    margin-top: 0;
+    margin-bottom: 20px;
+
+    text-align: center;
+    color: #666666;
+}
+
+.products__price {
+    margin: 0 auto;
+    width: 200px;
+    height: 50px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+}
+
+.products__pagination-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.products__pagination-link {
+    display: block;
+    margin-right: 5px;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    min-width: 50px;
+    min-height: 50px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+
+    text-align: center;
+    line-height: 50px;
+    background-color: #eeeeee;
+    text-decoration: none;
+    color: #000000;
+}
+
+.products__pagination-link_next {
+    width: 260px;
+}
 
 /* Интерактивные стили */
 
@@ -704,7 +973,8 @@ textarea {
 .categories__item:nth-child(1) .categories__button:hover,
 .adress__button:hover,
 .friendship__link:hover,
-.write-us__submit:hover {
+.write-us__submit:hover,
+.products__price:hover {
     background-color: #e74246;
 }
 
@@ -712,7 +982,8 @@ textarea {
 .categories__item:nth-child(1) .categories__button:active,
 .adress__button:active,
 .friendship__link:active,
-.write-us__submit:active {
+.write-us__submit:active,
+.products__price:active {
     background-color: #d7373b;
     color: #a6a6a6;
 }
@@ -786,4 +1057,61 @@ textarea {
     border-color: #000;
     color: #000;
     outline: none;
+}
+
+.products__sort-option:hover {
+    color: #a6a6a6;
+}
+
+.products__sort-option:active {
+    color: #000000;
+}
+
+.products__sort-icon-down:hover,
+.products__sort-icon-up:hover {
+    fill: #a6a6a6;
+}
+
+.products__sort-icon-down:active,
+.products__sort-icon-up:active {
+    fill: #000000;
+}
+
+.products__item:hover .products__item-header {
+    background-color: #4d4d4d;
+}
+
+.products__item:hover .products__info{
+    display: block;
+}
+
+.filter__label-radio:hover .filter__radio-off {
+    fill: #000000;
+}
+
+filter__label-radio:hover .filter__radio-on {
+    fill: #4d4d4d;
+}
+
+.filter__label-checkbox:hover .filter__checkbox-off {
+    fill: #000000;
+}
+
+.filter__label-checkbox:hover .filter__checkbox-on {
+    fill: #4d4d4d;
+}
+
+.filter__button:hover,
+.products__pagination-link:hover {
+    color: #000000;
+    background-color: #dfdfdf;
+}
+
+.filter__button:active,
+.products__pagination-link:active {
+    color: #a9a9a9;
+    background-color: #d5d5d5;
+    -webkit-box-shadow: inset 0 3px 0 #bfbfbf;
+    -moz-box-shadow: inset 0 3px 0 #bfbfbf;
+    box-shadow: inset 0 3px 0 #bfbfbf;
 }
